src/test/ui/parser/issues/issue-10636-1.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-10636-1.rs:3:1
   |
LL | struct Obj {
   |            - unmatched opening delimiter begins here
LL |     member: usize
LL | )
   | ^ mismatched closing delimiter

error: aborting due to previous error

